[gd_scene load_steps=3 format=3 uid="uid://c4wl5i28uragg"]

[ext_resource type="Script" path="res://inventory-system/inv-ui-slot/inv_ui_slot.gd" id="1_2sm8g"]
[ext_resource type="Texture2D" uid="uid://cbj5yq7l03low" path="res://assets/ui/inventory-ui/hot_bar_slot.png" id="2_pfw0q"]

[node name="Inv_UI_Slot" type="Panel"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(32, 32)
offset_right = 32.0
offset_bottom = 32.0
script = ExtResource("1_2sm8g")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2.13333, 2.28571)
texture = ExtResource("2_pfw0q")
centered = false

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0

[node name="Panel" type="Panel" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/Panel"]
z_index = 10
custom_minimum_size = Vector2(19, 23)
layout_mode = 2
offset_left = 4.0
offset_top = 3.0
offset_right = 23.0
offset_bottom = 26.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "99"
horizontal_alignment = 2

[node name="ItemDisplay" type="Sprite2D" parent="CenterContainer"]
centered = false

[node name="HoverBtn" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_top = -26.0
offset_right = 32.0
offset_bottom = 33.0

[node name="ItemDesc" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="ItemDesc"]
visible = false
offset_left = 11.0
offset_top = 116.0
offset_right = 197.0
offset_bottom = 323.0

[node name="Item_type" type="Label" parent="ItemDesc/Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 104.0
offset_bottom = 43.0
text = "Item type"

[node name="Item_name" type="Label" parent="ItemDesc/Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 60.0
offset_right = 104.0
offset_bottom = 83.0
text = "Item name"

[node name="Item_desc" type="Label" parent="ItemDesc/Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 100.0
offset_right = 104.0
offset_bottom = 123.0
text = "Item desc"

[node name="UtilWindow" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_top = -25.0
offset_right = 32.0

[node name="UseBtn" type="Button" parent="UtilWindow"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 49.0
offset_bottom = 35.0
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 15
text = "use"

[connection signal="mouse_entered" from="HoverBtn" to="." method="_on_hover_btn_mouse_entered"]
[connection signal="mouse_exited" from="HoverBtn" to="." method="_on_hover_btn_mouse_exited"]
[connection signal="pressed" from="HoverBtn" to="." method="_on_hover_btn_pressed"]
[connection signal="pressed" from="UtilWindow/UseBtn" to="." method="_on_use_btn_pressed"]
